force-app/main/default/objects/Contact/fields/Autoriza_Tratamiento_Datos__c.field-meta.xml
<CustomField>
    <fullName>Autoriza_Tratamiento_Datos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoriza Tratamiento de Datos Personales</label>
    <type>Checkbox</type>
</CustomField>