force-app/main/default/objects/Contact/fields/co_cuantas_pers_viven_contigo__c.field-meta.xml
<CustomField>
    <fullName>co_cuantas_pers_viven_contigo__c</fullName>
    <label>¿Cuántas Personas Viven Contigo?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>