force-app/main/default/objects/Contact/fields/co_cuantos_familiares_entre_13_25__c.field-meta.xml
<CustomField>
    <fullName>co_cuantos_familiares_entre_13_25__c</fullName>
    <label>¿Cuántos familiares entre 13 y 25 años?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>