force-app/main/default/objects/Contact/fields/co_cuantos_familiares_entre_25_45__c.field-meta.xml
<CustomField>
    <fullName>co_cuantos_familiares_entre_25_45__c</fullName>
    <label>¿Cuántos familiares entre 25 y 45 años?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>