force-app/main/default/objects/Contact/fields/co_cuantos_familiares_mayores_45__c.field-meta.xml
<CustomField>
    <fullName>co_cuantos_familiares_mayores_45__c</fullName>
    <label>¿Cuántos familiares mayores de 45  años?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>