force-app/main/default/objects/Contact/fields/co_cuantos_menores_12__c.field-meta.xml
<CustomField>
    <fullName>co_cuantos_menores_12__c</fullName>
    <label>¿Cuántos familiares menores de 12 años?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>