force-app/main/default/objects/Contact/fields/co_descuento_tarjeta__c.field-meta.xml
<CustomField>
    <fullName>co_descuento_tarjeta__c</fullName>
    <label>Descuento de Tarjeta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>