force-app/main/default/objects/Contact/fields/co_empleado__c.field-meta.xml
<CustomField>
    <fullName>co_empleado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Empleado</label>
    <type>Checkbox</type>
</CustomField>