force-app/main/default/objects/Contact/fields/co_familiares_entre_13_25__c.field-meta.xml
<CustomField>
    <fullName>co_familiares_entre_13_25__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Hay familiares entre 13 - 25 años?</label>
    <type>Checkbox</type>
</CustomField>