force-app/main/default/objects/Contact/fields/co_familiares_mas_45__c.field-meta.xml
<CustomField>
    <fullName>co_familiares_mas_45__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Hay familiares con más de 45 años?</label>
    <type>Checkbox</type>
</CustomField>