force-app/main/default/objects/Contact/fields/co_hace_deporte__c.field-meta.xml
<CustomField>
    <fullName>co_hace_deporte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hace Deporte</label>
    <type>Checkbox</type>
</CustomField>