force-app/main/default/objects/Contact/fields/co_huevos_por_suscripcion__c.field-meta.xml
<CustomField>
    <fullName>co_huevos_por_suscripcion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Huevos por Suscripción</label>
    <type>Checkbox</type>
</CustomField>