force-app/main/default/objects/Contact/fields/co_num_tarjeta_millonaria__c.field-meta.xml
<CustomField>
    <fullName>co_num_tarjeta_millonaria__c</fullName>
    <label>Número de Tarjeta Millonaria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>