force-app/main/default/objects/Contact/fields/co_numero_descuento_disponible__c.field-meta.xml
<CustomField>
    <fullName>co_numero_descuento_disponible__c</fullName>
    <label>Número de Descuentos Disponibles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>