force-app/main/default/objects/Contact/fields/co_tarjeta_millonaria__c.field-meta.xml
<CustomField>
    <fullName>co_tarjeta_millonaria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene Tarjeta Millonaria</label>
    <type>Checkbox</type>
</CustomField>