force-app/main/default/objects/Contact/fields/co_tiene_hijos__c.field-meta.xml
<CustomField>
    <fullName>co_tiene_hijos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Hay menores de 12 años en su familia?</label>
    <type>Checkbox</type>
</CustomField>