force-app/main/default/objects/Contact/fields/co_tiene_mascotas__c.field-meta.xml
<CustomField>
    <fullName>co_tiene_mascotas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tiene Mascotas</label>
    <type>Checkbox</type>
</CustomField>