force-app/main/default/objects/Contact/fields/Con_Rol_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Con_Rol_Cliente__c</fullName>
    <label>Rol en el Cliente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>