force-app/main/default/objects/Contact/fields/cu_cantidad_menores__c.field-meta.xml
<CustomField>
    <fullName>cu_cantidad_menores__c</fullName>
    <label>¿Cuántos menores de 12 años?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>