force-app/main/default/objects/Contact/fields/cu_numero_identificacion__c.field-meta.xml
<CustomField>
    <fullName>cu_numero_identificacion__c</fullName>
    <label>Número Identificación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>