force-app/main/default/objects/Contact/fields/cu_tienda__c.field-meta.xml
<CustomField>
    <fullName>cu_tienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tienda asociada a contactos</description>
    <label>Tienda</label>
    <referenceTo>RetailStore</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>