force-app/main/default/objects/Contact/fields/Detalle_direccion_envio__c.field-meta.xml
<CustomField>
    <fullName>Detalle_direccion_envio__c</fullName>
    <label>Detalle dirección de envío</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>